<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/filterLayoutCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:elevation="8dp"
        android:layout_marginBottom="30dp"
        app:cardBackgroundColor="@color/dark_gray"
        app:cardCornerRadius="18dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/filterLayoutTitleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/main_activity_filters_title"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/main_activity_filters_title" />

            <EditText
                android:id="@+id/filterLayoutMakeET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/main_activity_filters_make_hint"
                android:inputType="text"
                android:padding="5dp"
                android:textColorHint="@color/dark_gray"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/filterLayoutTitleTV"
                app:layout_constraintTop_toBottomOf="@+id/filterLayoutTitleTV"
                tools:hint="@string/main_activity_filters_make_hint" />

            <EditText
                android:id="@+id/filterLayoutModelET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/main_activity_filters_model_hint"
                android:inputType="text"
                android:padding="5dp"
                android:textColorHint="@color/dark_gray"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/filterLayoutMakeET"
                app:layout_constraintTop_toBottomOf="@+id/filterLayoutMakeET"
                tools:hint="@string/main_activity_filters_model_hint" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>